src/parser/build/parser.output
Terminals unused in grammar

    ROOT


State 34 conflicts: 17 reduce/reduce
State 72 conflicts: 5 reduce/reduce


Grammar

    0 $accept: root END

    1 root: token_list END

    2 token_list: any_token
    3           | grammar_spec
    4           | grammar_block
    5           | token_list any_token
    6           | token_list grammar_spec
    7           | token_list grammar_block

    8 grammar_block: grammar_tag token_list RIGHT_BRK

    9 grammar_tag: GRAMMAR_TAG

   10 grammar_spec: GRAMMAR_SPEC_TAG LEFT_BRC grammar_spec_block RIGHT_BRC

   11 grammar_spec_block: grammar_spec_tokens grammar_spec_rules

   12 grammar_spec_tokens: TOKENS_KW LEFT_BRC grammar_spec_token_list RIGHT_BRC

   13 grammar_spec_token_list: ε
   14                        | grammar_spec_token_list grammar_spec_token_list_item

   15 grammar_spec_token_list_item: IDENTIFIER EQUAL TOKEN_REGEX

   16 grammar_spec_rules: RULES_KW LEFT_BRC grammar_spec_rule_list RIGHT_BRC

   17 grammar_spec_rule_list: ε
   18                       | grammar_spec_rule_list grammar_spec_rule_list_item

   19 grammar_spec_rule_list_item: IDENTIFIER EQUAL grammar_rule_option_list SEMICOLON

   20 grammar_rule_option_list: grammar_rule_node
   21                         | grammar_rule_option_list PIPE grammar_rule_node
   22                         | grammar_rule_option_list grammar_rule_node_pattern

   23 grammar_rule_node: IDENTIFIER
   24                  | LEFT_BRC grammar_rule_option_list RIGHT_BRC
   25                  | LEFT_PRN grammar_rule_option_list RIGHT_PRN
   26                  | grammar_rule_node IDENTIFIER
   27                  | grammar_rule_node LEFT_BRC grammar_rule_option_list RIGHT_BRC
   28                  | grammar_rule_node LEFT_PRN grammar_rule_option_list RIGHT_PRN

   29 grammar_rule_node_pattern: LEFT_ANG grammar_rule_node_pattern_token_list RIGHT_ANG

   30 grammar_rule_node_pattern_token_list: any_token
   31                                     | grammar_rule_node_pattern_token_list any_token

   32 any_token: RAW_TOKEN
   33          | EQUAL
   34          | LEFT_BRC
   35          | RIGHT_BRC
   36          | LEFT_BRK
   37          | RIGHT_BRK
   38          | LEFT_PRN
   39          | RIGHT_PRN
   40          | LEFT_ANG
   41          | RIGHT_ANG
   42          | PIPE
   43          | SEMICOLON
   44          | TOKENS_KW
   45          | RULES_KW
   46          | IDENTIFIER


Terminals, with rules where they appear

    END (0) 0 1
    error (256)
    ROOT (258)
    EQUAL (259) 15 19 33
    LEFT_BRC (260) 10 12 16 24 27 34
    RIGHT_BRC (261) 10 12 16 24 27 35
    LEFT_BRK (262) 36
    RIGHT_BRK (263) 8 37
    LEFT_PRN (264) 25 28 38
    RIGHT_PRN (265) 25 28 39
    LEFT_ANG (266) 29 40
    RIGHT_ANG (267) 29 41
    PIPE (268) 21 42
    SEMICOLON (269) 19 43
    TOKENS_KW (270) 12 44
    RULES_KW (271) 16 45
    TOKEN_REGEX <std::string> (272) 15
    GRAMMAR_SPEC_TAG <std::string> (273) 10
    GRAMMAR_TAG <std::string> (274) 9
    IDENTIFIER <std::string> (275) 15 19 23 26 46
    RAW_TOKEN <std::string> (276) 32


Nonterminals, with rules where they appear

    $accept (22)
        on left: 0
    root (23)
        on left: 1
        on right: 0
    token_list (24)
        on left: 2 3 4 5 6 7
        on right: 1 5 6 7 8
    grammar_block (25)
        on left: 8
        on right: 4 7
    grammar_tag (26)
        on left: 9
        on right: 8
    grammar_spec <ulang_grammar> (27)
        on left: 10
        on right: 3 6
    grammar_spec_block <ulang_grammar> (28)
        on left: 11
        on right: 10
    grammar_spec_tokens <std::unordered_map<std::string, ulang_grammar::token_rule>> (29)
        on left: 12
        on right: 11
    grammar_spec_token_list <std::unordered_map<std::string, ulang_grammar::token_rule>> (30)
        on left: 13 14
        on right: 12 14
    grammar_spec_token_list_item <std::pair<std::string, ulang_grammar::token_rule>> (31)
        on left: 15
        on right: 14
    grammar_spec_rules <std::unordered_map<std::string, ulang_grammar::grammar_rule>> (32)
        on left: 16
        on right: 11
    grammar_spec_rule_list <std::unordered_map<std::string, ulang_grammar::grammar_rule>> (33)
        on left: 17 18
        on right: 16 18
    grammar_spec_rule_list_item <std::pair<std::string, ulang_grammar::grammar_rule>> (34)
        on left: 19
        on right: 18
    grammar_rule_option_list <ulang_grammar::non_terminal_node> (35)
        on left: 20 21 22
        on right: 19 21 22 24 25 27 28
    grammar_rule_node <ulang_grammar::non_terminal_node> (36)
        on left: 23 24 25 26 27 28
        on right: 20 21 26 27 28
    grammar_rule_node_pattern <std::string> (37)
        on left: 29
        on right: 22
    grammar_rule_node_pattern_token_list <std::string> (38)
        on left: 30 31
        on right: 29 31
    any_token <std::string> (39)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 2 5 30 31


State 0

    0 $accept: • root END

    EQUAL             shift, and go to state 1
    LEFT_BRC          shift, and go to state 2
    RIGHT_BRC         shift, and go to state 3
    LEFT_BRK          shift, and go to state 4
    RIGHT_BRK         shift, and go to state 5
    LEFT_PRN          shift, and go to state 6
    RIGHT_PRN         shift, and go to state 7
    LEFT_ANG          shift, and go to state 8
    RIGHT_ANG         shift, and go to state 9
    PIPE              shift, and go to state 10
    SEMICOLON         shift, and go to state 11
    TOKENS_KW         shift, and go to state 12
    RULES_KW          shift, and go to state 13
    GRAMMAR_SPEC_TAG  shift, and go to state 14
    GRAMMAR_TAG       shift, and go to state 15
    IDENTIFIER        shift, and go to state 16
    RAW_TOKEN         shift, and go to state 17

    root           go to state 18
    token_list     go to state 19
    grammar_block  go to state 20
    grammar_tag    go to state 21
    grammar_spec   go to state 22
    any_token      go to state 23


State 1

   33 any_token: EQUAL •

    $default  reduce using rule 33 (any_token)


State 2

   34 any_token: LEFT_BRC •

    $default  reduce using rule 34 (any_token)


State 3

   35 any_token: RIGHT_BRC •

    $default  reduce using rule 35 (any_token)


State 4

   36 any_token: LEFT_BRK •

    $default  reduce using rule 36 (any_token)


State 5

   37 any_token: RIGHT_BRK •

    $default  reduce using rule 37 (any_token)


State 6

   38 any_token: LEFT_PRN •

    $default  reduce using rule 38 (any_token)


State 7

   39 any_token: RIGHT_PRN •

    $default  reduce using rule 39 (any_token)


State 8

   40 any_token: LEFT_ANG •

    $default  reduce using rule 40 (any_token)


State 9

   41 any_token: RIGHT_ANG •

    $default  reduce using rule 41 (any_token)


State 10

   42 any_token: PIPE •

    $default  reduce using rule 42 (any_token)


State 11

   43 any_token: SEMICOLON •

    $default  reduce using rule 43 (any_token)


State 12

   44 any_token: TOKENS_KW •

    $default  reduce using rule 44 (any_token)


State 13

   45 any_token: RULES_KW •

    $default  reduce using rule 45 (any_token)


State 14

   10 grammar_spec: GRAMMAR_SPEC_TAG • LEFT_BRC grammar_spec_block RIGHT_BRC

    LEFT_BRC  shift, and go to state 24


State 15

    9 grammar_tag: GRAMMAR_TAG •

    $default  reduce using rule 9 (grammar_tag)


State 16

   46 any_token: IDENTIFIER •

    $default  reduce using rule 46 (any_token)


State 17

   32 any_token: RAW_TOKEN •

    $default  reduce using rule 32 (any_token)


State 18

    0 $accept: root • END

    END  shift, and go to state 25


State 19

    1 root: token_list • END
    5 token_list: token_list • any_token
    6           | token_list • grammar_spec
    7           | token_list • grammar_block

    END               shift, and go to state 26
    EQUAL             shift, and go to state 1
    LEFT_BRC          shift, and go to state 2
    RIGHT_BRC         shift, and go to state 3
    LEFT_BRK          shift, and go to state 4
    RIGHT_BRK         shift, and go to state 5
    LEFT_PRN          shift, and go to state 6
    RIGHT_PRN         shift, and go to state 7
    LEFT_ANG          shift, and go to state 8
    RIGHT_ANG         shift, and go to state 9
    PIPE              shift, and go to state 10
    SEMICOLON         shift, and go to state 11
    TOKENS_KW         shift, and go to state 12
    RULES_KW          shift, and go to state 13
    GRAMMAR_SPEC_TAG  shift, and go to state 14
    GRAMMAR_TAG       shift, and go to state 15
    IDENTIFIER        shift, and go to state 16
    RAW_TOKEN         shift, and go to state 17

    grammar_block  go to state 27
    grammar_tag    go to state 21
    grammar_spec   go to state 28
    any_token      go to state 29


State 20

    4 token_list: grammar_block •

    $default  reduce using rule 4 (token_list)


State 21

    8 grammar_block: grammar_tag • token_list RIGHT_BRK

    EQUAL             shift, and go to state 1
    LEFT_BRC          shift, and go to state 2
    RIGHT_BRC         shift, and go to state 3
    LEFT_BRK          shift, and go to state 4
    RIGHT_BRK         shift, and go to state 5
    LEFT_PRN          shift, and go to state 6
    RIGHT_PRN         shift, and go to state 7
    LEFT_ANG          shift, and go to state 8
    RIGHT_ANG         shift, and go to state 9
    PIPE              shift, and go to state 10
    SEMICOLON         shift, and go to state 11
    TOKENS_KW         shift, and go to state 12
    RULES_KW          shift, and go to state 13
    GRAMMAR_SPEC_TAG  shift, and go to state 14
    GRAMMAR_TAG       shift, and go to state 15
    IDENTIFIER        shift, and go to state 16
    RAW_TOKEN         shift, and go to state 17

    token_list     go to state 30
    grammar_block  go to state 20
    grammar_tag    go to state 21
    grammar_spec   go to state 22
    any_token      go to state 23


State 22

    3 token_list: grammar_spec •

    $default  reduce using rule 3 (token_list)


State 23

    2 token_list: any_token •

    $default  reduce using rule 2 (token_list)


State 24

   10 grammar_spec: GRAMMAR_SPEC_TAG LEFT_BRC • grammar_spec_block RIGHT_BRC

    TOKENS_KW  shift, and go to state 31

    grammar_spec_block   go to state 32
    grammar_spec_tokens  go to state 33


State 25

    0 $accept: root END •

    $default  accept


State 26

    1 root: token_list END •

    $default  reduce using rule 1 (root)


State 27

    7 token_list: token_list grammar_block •

    $default  reduce using rule 7 (token_list)


State 28

    6 token_list: token_list grammar_spec •

    $default  reduce using rule 6 (token_list)


State 29

    5 token_list: token_list any_token •

    $default  reduce using rule 5 (token_list)


State 30

    5 token_list: token_list • any_token
    6           | token_list • grammar_spec
    7           | token_list • grammar_block
    8 grammar_block: grammar_tag token_list • RIGHT_BRK

    EQUAL             shift, and go to state 1
    LEFT_BRC          shift, and go to state 2
    RIGHT_BRC         shift, and go to state 3
    LEFT_BRK          shift, and go to state 4
    RIGHT_BRK         shift, and go to state 34
    LEFT_PRN          shift, and go to state 6
    RIGHT_PRN         shift, and go to state 7
    LEFT_ANG          shift, and go to state 8
    RIGHT_ANG         shift, and go to state 9
    PIPE              shift, and go to state 10
    SEMICOLON         shift, and go to state 11
    TOKENS_KW         shift, and go to state 12
    RULES_KW          shift, and go to state 13
    GRAMMAR_SPEC_TAG  shift, and go to state 14
    GRAMMAR_TAG       shift, and go to state 15
    IDENTIFIER        shift, and go to state 16
    RAW_TOKEN         shift, and go to state 17

    grammar_block  go to state 27
    grammar_tag    go to state 21
    grammar_spec   go to state 28
    any_token      go to state 29


State 31

   12 grammar_spec_tokens: TOKENS_KW • LEFT_BRC grammar_spec_token_list RIGHT_BRC

    LEFT_BRC  shift, and go to state 35


State 32

   10 grammar_spec: GRAMMAR_SPEC_TAG LEFT_BRC grammar_spec_block • RIGHT_BRC

    RIGHT_BRC  shift, and go to state 36


State 33

   11 grammar_spec_block: grammar_spec_tokens • grammar_spec_rules

    RULES_KW  shift, and go to state 37

    grammar_spec_rules  go to state 38


State 34

    8 grammar_block: grammar_tag token_list RIGHT_BRK •
   37 any_token: RIGHT_BRK •

    EQUAL             reduce using rule 8 (grammar_block)
    EQUAL             [reduce using rule 37 (any_token)]
    LEFT_BRC          reduce using rule 8 (grammar_block)
    LEFT_BRC          [reduce using rule 37 (any_token)]
    RIGHT_BRC         reduce using rule 8 (grammar_block)
    RIGHT_BRC         [reduce using rule 37 (any_token)]
    LEFT_BRK          reduce using rule 8 (grammar_block)
    LEFT_BRK          [reduce using rule 37 (any_token)]
    RIGHT_BRK         reduce using rule 8 (grammar_block)
    RIGHT_BRK         [reduce using rule 37 (any_token)]
    LEFT_PRN          reduce using rule 8 (grammar_block)
    LEFT_PRN          [reduce using rule 37 (any_token)]
    RIGHT_PRN         reduce using rule 8 (grammar_block)
    RIGHT_PRN         [reduce using rule 37 (any_token)]
    LEFT_ANG          reduce using rule 8 (grammar_block)
    LEFT_ANG          [reduce using rule 37 (any_token)]
    RIGHT_ANG         reduce using rule 8 (grammar_block)
    RIGHT_ANG         [reduce using rule 37 (any_token)]
    PIPE              reduce using rule 8 (grammar_block)
    PIPE              [reduce using rule 37 (any_token)]
    SEMICOLON         reduce using rule 8 (grammar_block)
    SEMICOLON         [reduce using rule 37 (any_token)]
    TOKENS_KW         reduce using rule 8 (grammar_block)
    TOKENS_KW         [reduce using rule 37 (any_token)]
    RULES_KW          reduce using rule 8 (grammar_block)
    RULES_KW          [reduce using rule 37 (any_token)]
    GRAMMAR_SPEC_TAG  reduce using rule 8 (grammar_block)
    GRAMMAR_SPEC_TAG  [reduce using rule 37 (any_token)]
    GRAMMAR_TAG       reduce using rule 8 (grammar_block)
    GRAMMAR_TAG       [reduce using rule 37 (any_token)]
    IDENTIFIER        reduce using rule 8 (grammar_block)
    IDENTIFIER        [reduce using rule 37 (any_token)]
    RAW_TOKEN         reduce using rule 8 (grammar_block)
    RAW_TOKEN         [reduce using rule 37 (any_token)]
    $default          reduce using rule 8 (grammar_block)


State 35

   12 grammar_spec_tokens: TOKENS_KW LEFT_BRC • grammar_spec_token_list RIGHT_BRC

    $default  reduce using rule 13 (grammar_spec_token_list)

    grammar_spec_token_list  go to state 39


State 36

   10 grammar_spec: GRAMMAR_SPEC_TAG LEFT_BRC grammar_spec_block RIGHT_BRC •

    $default  reduce using rule 10 (grammar_spec)


State 37

   16 grammar_spec_rules: RULES_KW • LEFT_BRC grammar_spec_rule_list RIGHT_BRC

    LEFT_BRC  shift, and go to state 40


State 38

   11 grammar_spec_block: grammar_spec_tokens grammar_spec_rules •

    $default  reduce using rule 11 (grammar_spec_block)


State 39

   12 grammar_spec_tokens: TOKENS_KW LEFT_BRC grammar_spec_token_list • RIGHT_BRC
   14 grammar_spec_token_list: grammar_spec_token_list • grammar_spec_token_list_item

    RIGHT_BRC   shift, and go to state 41
    IDENTIFIER  shift, and go to state 42

    grammar_spec_token_list_item  go to state 43


State 40

   16 grammar_spec_rules: RULES_KW LEFT_BRC • grammar_spec_rule_list RIGHT_BRC

    $default  reduce using rule 17 (grammar_spec_rule_list)

    grammar_spec_rule_list  go to state 44


State 41

   12 grammar_spec_tokens: TOKENS_KW LEFT_BRC grammar_spec_token_list RIGHT_BRC •

    $default  reduce using rule 12 (grammar_spec_tokens)


State 42

   15 grammar_spec_token_list_item: IDENTIFIER • EQUAL TOKEN_REGEX

    EQUAL  shift, and go to state 45


State 43

   14 grammar_spec_token_list: grammar_spec_token_list grammar_spec_token_list_item •

    $default  reduce using rule 14 (grammar_spec_token_list)


State 44

   16 grammar_spec_rules: RULES_KW LEFT_BRC grammar_spec_rule_list • RIGHT_BRC
   18 grammar_spec_rule_list: grammar_spec_rule_list • grammar_spec_rule_list_item

    RIGHT_BRC   shift, and go to state 46
    IDENTIFIER  shift, and go to state 47

    grammar_spec_rule_list_item  go to state 48


State 45

   15 grammar_spec_token_list_item: IDENTIFIER EQUAL • TOKEN_REGEX

    TOKEN_REGEX  shift, and go to state 49


State 46

   16 grammar_spec_rules: RULES_KW LEFT_BRC grammar_spec_rule_list RIGHT_BRC •

    $default  reduce using rule 16 (grammar_spec_rules)


State 47

   19 grammar_spec_rule_list_item: IDENTIFIER • EQUAL grammar_rule_option_list SEMICOLON

    EQUAL  shift, and go to state 50


State 48

   18 grammar_spec_rule_list: grammar_spec_rule_list grammar_spec_rule_list_item •

    $default  reduce using rule 18 (grammar_spec_rule_list)


State 49

   15 grammar_spec_token_list_item: IDENTIFIER EQUAL TOKEN_REGEX •

    $default  reduce using rule 15 (grammar_spec_token_list_item)


State 50

   19 grammar_spec_rule_list_item: IDENTIFIER EQUAL • grammar_rule_option_list SEMICOLON

    LEFT_BRC    shift, and go to state 51
    LEFT_PRN    shift, and go to state 52
    IDENTIFIER  shift, and go to state 53

    grammar_rule_option_list  go to state 54
    grammar_rule_node         go to state 55


State 51

   24 grammar_rule_node: LEFT_BRC • grammar_rule_option_list RIGHT_BRC

    LEFT_BRC    shift, and go to state 51
    LEFT_PRN    shift, and go to state 52
    IDENTIFIER  shift, and go to state 53

    grammar_rule_option_list  go to state 56
    grammar_rule_node         go to state 55


State 52

   25 grammar_rule_node: LEFT_PRN • grammar_rule_option_list RIGHT_PRN

    LEFT_BRC    shift, and go to state 51
    LEFT_PRN    shift, and go to state 52
    IDENTIFIER  shift, and go to state 53

    grammar_rule_option_list  go to state 57
    grammar_rule_node         go to state 55


State 53

   23 grammar_rule_node: IDENTIFIER •

    $default  reduce using rule 23 (grammar_rule_node)


State 54

   19 grammar_spec_rule_list_item: IDENTIFIER EQUAL grammar_rule_option_list • SEMICOLON
   21 grammar_rule_option_list: grammar_rule_option_list • PIPE grammar_rule_node
   22                         | grammar_rule_option_list • grammar_rule_node_pattern

    LEFT_ANG   shift, and go to state 58
    PIPE       shift, and go to state 59
    SEMICOLON  shift, and go to state 60

    grammar_rule_node_pattern  go to state 61


State 55

   20 grammar_rule_option_list: grammar_rule_node •
   26 grammar_rule_node: grammar_rule_node • IDENTIFIER
   27                  | grammar_rule_node • LEFT_BRC grammar_rule_option_list RIGHT_BRC
   28                  | grammar_rule_node • LEFT_PRN grammar_rule_option_list RIGHT_PRN

    LEFT_BRC    shift, and go to state 62
    LEFT_PRN    shift, and go to state 63
    IDENTIFIER  shift, and go to state 64

    $default  reduce using rule 20 (grammar_rule_option_list)


State 56

   21 grammar_rule_option_list: grammar_rule_option_list • PIPE grammar_rule_node
   22                         | grammar_rule_option_list • grammar_rule_node_pattern
   24 grammar_rule_node: LEFT_BRC grammar_rule_option_list • RIGHT_BRC

    RIGHT_BRC  shift, and go to state 65
    LEFT_ANG   shift, and go to state 58
    PIPE       shift, and go to state 59

    grammar_rule_node_pattern  go to state 61


State 57

   21 grammar_rule_option_list: grammar_rule_option_list • PIPE grammar_rule_node
   22                         | grammar_rule_option_list • grammar_rule_node_pattern
   25 grammar_rule_node: LEFT_PRN grammar_rule_option_list • RIGHT_PRN

    RIGHT_PRN  shift, and go to state 66
    LEFT_ANG   shift, and go to state 58
    PIPE       shift, and go to state 59

    grammar_rule_node_pattern  go to state 61


State 58

   29 grammar_rule_node_pattern: LEFT_ANG • grammar_rule_node_pattern_token_list RIGHT_ANG

    EQUAL       shift, and go to state 1
    LEFT_BRC    shift, and go to state 2
    RIGHT_BRC   shift, and go to state 3
    LEFT_BRK    shift, and go to state 4
    RIGHT_BRK   shift, and go to state 5
    LEFT_PRN    shift, and go to state 6
    RIGHT_PRN   shift, and go to state 7
    LEFT_ANG    shift, and go to state 8
    RIGHT_ANG   shift, and go to state 9
    PIPE        shift, and go to state 10
    SEMICOLON   shift, and go to state 11
    TOKENS_KW   shift, and go to state 12
    RULES_KW    shift, and go to state 13
    IDENTIFIER  shift, and go to state 16
    RAW_TOKEN   shift, and go to state 17

    grammar_rule_node_pattern_token_list  go to state 67
    any_token                             go to state 68


State 59

   21 grammar_rule_option_list: grammar_rule_option_list PIPE • grammar_rule_node

    LEFT_BRC    shift, and go to state 51
    LEFT_PRN    shift, and go to state 52
    IDENTIFIER  shift, and go to state 53

    grammar_rule_node  go to state 69


State 60

   19 grammar_spec_rule_list_item: IDENTIFIER EQUAL grammar_rule_option_list SEMICOLON •

    $default  reduce using rule 19 (grammar_spec_rule_list_item)


State 61

   22 grammar_rule_option_list: grammar_rule_option_list grammar_rule_node_pattern •

    $default  reduce using rule 22 (grammar_rule_option_list)


State 62

   27 grammar_rule_node: grammar_rule_node LEFT_BRC • grammar_rule_option_list RIGHT_BRC

    LEFT_BRC    shift, and go to state 51
    LEFT_PRN    shift, and go to state 52
    IDENTIFIER  shift, and go to state 53

    grammar_rule_option_list  go to state 70
    grammar_rule_node         go to state 55


State 63

   28 grammar_rule_node: grammar_rule_node LEFT_PRN • grammar_rule_option_list RIGHT_PRN

    LEFT_BRC    shift, and go to state 51
    LEFT_PRN    shift, and go to state 52
    IDENTIFIER  shift, and go to state 53

    grammar_rule_option_list  go to state 71
    grammar_rule_node         go to state 55


State 64

   26 grammar_rule_node: grammar_rule_node IDENTIFIER •

    $default  reduce using rule 26 (grammar_rule_node)


State 65

   24 grammar_rule_node: LEFT_BRC grammar_rule_option_list RIGHT_BRC •

    $default  reduce using rule 24 (grammar_rule_node)


State 66

   25 grammar_rule_node: LEFT_PRN grammar_rule_option_list RIGHT_PRN •

    $default  reduce using rule 25 (grammar_rule_node)


State 67

   29 grammar_rule_node_pattern: LEFT_ANG grammar_rule_node_pattern_token_list • RIGHT_ANG
   31 grammar_rule_node_pattern_token_list: grammar_rule_node_pattern_token_list • any_token

    EQUAL       shift, and go to state 1
    LEFT_BRC    shift, and go to state 2
    RIGHT_BRC   shift, and go to state 3
    LEFT_BRK    shift, and go to state 4
    RIGHT_BRK   shift, and go to state 5
    LEFT_PRN    shift, and go to state 6
    RIGHT_PRN   shift, and go to state 7
    LEFT_ANG    shift, and go to state 8
    RIGHT_ANG   shift, and go to state 72
    PIPE        shift, and go to state 10
    SEMICOLON   shift, and go to state 11
    TOKENS_KW   shift, and go to state 12
    RULES_KW    shift, and go to state 13
    IDENTIFIER  shift, and go to state 16
    RAW_TOKEN   shift, and go to state 17

    any_token  go to state 73


State 68

   30 grammar_rule_node_pattern_token_list: any_token •

    $default  reduce using rule 30 (grammar_rule_node_pattern_token_list)


State 69

   21 grammar_rule_option_list: grammar_rule_option_list PIPE grammar_rule_node •
   26 grammar_rule_node: grammar_rule_node • IDENTIFIER
   27                  | grammar_rule_node • LEFT_BRC grammar_rule_option_list RIGHT_BRC
   28                  | grammar_rule_node • LEFT_PRN grammar_rule_option_list RIGHT_PRN

    LEFT_BRC    shift, and go to state 62
    LEFT_PRN    shift, and go to state 63
    IDENTIFIER  shift, and go to state 64

    $default  reduce using rule 21 (grammar_rule_option_list)


State 70

   21 grammar_rule_option_list: grammar_rule_option_list • PIPE grammar_rule_node
   22                         | grammar_rule_option_list • grammar_rule_node_pattern
   27 grammar_rule_node: grammar_rule_node LEFT_BRC grammar_rule_option_list • RIGHT_BRC

    RIGHT_BRC  shift, and go to state 74
    LEFT_ANG   shift, and go to state 58
    PIPE       shift, and go to state 59

    grammar_rule_node_pattern  go to state 61


State 71

   21 grammar_rule_option_list: grammar_rule_option_list • PIPE grammar_rule_node
   22                         | grammar_rule_option_list • grammar_rule_node_pattern
   28 grammar_rule_node: grammar_rule_node LEFT_PRN grammar_rule_option_list • RIGHT_PRN

    RIGHT_PRN  shift, and go to state 75
    LEFT_ANG   shift, and go to state 58
    PIPE       shift, and go to state 59

    grammar_rule_node_pattern  go to state 61


State 72
